--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,14 +1,14 @@
-= Whonix Anonymous Operating System =
+= About Whonix =
 
 Whonix is an operating system focused on anonymity, privacy and security. It's based on the Tor anonymity network, Debian GNU/Linux and security by isolation. DNS leaks are impossible, and not even malware with root privileges can find out the user's real IP.
 
 Whonix consists of two parts: One solely runs Tor and acts as a gateway, which we call Whonix-Gateway. The other, which we call Whonix-Workstation, is on a completely isolated network. Only connections through Tor are possible.
 
-To learn more about security and anonymity under Whonix, please continue to [https://www.whonix.org/wiki/About About Whonix].
+To learn more about security and anonymity under Whonix, please continue to the [https://www.whonix.org/wiki/About About Whonix] page.
 
 '''[https://www.whonix.org/wiki/Download Download Whonix]'''
 
-= How to Build Whonix from Source Code =
+= Build Whonix from Source Code =
 
 <pre>
 sudo ./whonix_build_both
@@ -16,7 +16,7 @@ sudo ./whonix_build_both
 
 More verbose, paranoid build instructions and steps for redistribution can be found [https://www.whonix.org/wiki/Dev/Build_Documentation here].
 
-= How to Contribute =
+= Contribute =
 
-Either work on any of the [https://github.com/Whonix/Whonix/issues open tickets] or suggest and implement any of your own ideas. Report issues you may find with Whonix or building from source code. Sign up for the [https://www.whonix.org/cgi-bin/mailman/listinfo/whonix-devel whonix-devel mailing list] and say hi. For any questions/discussion, mail whonix-devel.
+Either work on any of the [https://github.com/Whonix/Whonix/issues open tickets] or suggest and implement any of your own ideas. Report issues you may find with Whonix or with the building process. Sign up for the [https://www.whonix.org/cgi-bin/mailman/listinfo/whonix-devel whonix-devel mailing list] and say hi. For any questions/discussion, mail whonix-devel.
 
